# duckdb-sshfs

./: .gitignore  .ripsecrets.toml  .secretsignore  CLAUDE.md  CMakeLists.txt  DEVENV.md  Makefile  README.md  devenv.nix  extension_config.cmake  vcpkg.json
.github/workflows/: CheckDuckDBVersion.yml  IntegrationTests.yml  MainDistributionPipeline.yml  scheduled-1.4.yml  scheduled-1.5.yml
scripts/: run_sshfs_test_server.sh  set_sshfs_test_server_variables.sh  sshfs.yml  stop_sshfs_test_server.sh  test-ssh-key  test-ssh-key.pub
src/: ssh_client.cpp  ssh_config.cpp  ssh_secrets.cpp  sshfs_extension.cpp  sshfs_file_handle.cpp  sshfs_filesystem.cpp
src/include/: ssh_client.hpp  ssh_config.hpp  ssh_helpers.hpp  ssh_secrets.hpp  sshfs_extension.hpp  sshfs_file_handle.hpp  sshfs_filesystem.hpp
test/sql/: sshfs.test
test/sql/secrets/: create_secret_sshfs.test
test/sql/sshfs/: host_alias.test  secret_scope.test  sftp_only_operations.test  sftp_prefix.test  ssh_prefix.test  sshfs_docker_test.test
